make la-cumparsita presentable

--- a/la-cumparsita.html
+++ b/la-cumparsita.html
@@ -2,9 +2,29 @@
 <html lang=en>
 <head>
   <meta charset="UTF-8">
-  <title>Tango Happy Hour Presents: La Cumparsita</title>
+  <title>Tango Happy Hour presents: La Cumparsita</title>
+  <style>
+    body {
+      background: black;
+      color: white;
+      margin: 0;
+      max-height: 100vh;
+    }
+    iframe {
+      border: none;
+      display: block;
+      margin: auto;
+      max-height: 85vh;
+    }
+    h1 {
+      font-family: "Fugaz One", cursive;
+      margin: 5vh 5vw;
+      max-height: 5vh;
+    }
+  </style>
 </head>
 <body>
-<iframe src="https://drive.google.com/file/d/1zH6_JFQNhb18gxjDmdrGYLrddcgKF9-7/preview" width="640" height="480" allow="autoplay"/>
+<h1>Tango Happy Hour Presents: La Cumparsita</h1>
+<iframe src="https://drive.google.com/file/d/1zH6_JFQNhb18gxjDmdrGYLrddcgKF9-7/preview" width="1920" height="1080" allow="autoplay"/>
 </body>
 </html>
