--- a/la-cumparsita.html
+++ b/la-cumparsita.html
@@ -15,6 +15,7 @@
       display: block;
       margin: auto;
       max-height: 85vh;
+      max-width: 100vw;
     }
     h1 {
       font-family: "Fugaz One", cursive;
@@ -24,7 +25,7 @@
   </style>
 </head>
 <body>
-<h1>Tango Happy Hour Presents: La Cumparsita</h1>
+<h1>Tango Happy Hour presents: La Cumparsita</h1>
 <iframe src="https://drive.google.com/file/d/1zH6_JFQNhb18gxjDmdrGYLrddcgKF9-7/preview" width="1920" height="1080" allow="autoplay"/>
 </body>
 </html>
